--- a/AndroidStudioProjects/HngTask1/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/HngTask1/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">HngTask1</string>
+    <string name="full_name">Tajudeen Wariz</string>
+    <string name="Slach_username">Bidex160</string>
+    <string name="Slack_mail">thabidemi@gmail.com</string>
+    <string name="Task">Mobile(Java , Kotlin)</string>
 </resources>
